ENG-1744: First step of seo integration